fix example link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome paddle.</h3>
 
-<p>see <a href="lotto.html">example</a></p>
+<p>see <a href="html/paddle.html">example</a></p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
