--- a/html/paddle.html
+++ b/html/paddle.html
@@ -5,7 +5,12 @@
  SCRIPT laget ifbm. åresalg i Eidsvåg meninghet.
  Denne koden kan fritt modifiseres og distribueres slik en 
  måtte ønske. 
- Kjell Kvinge, 2008, 2009, 2010, 2011, -->
+ Kjell Kvinge, 2008, 2009, 2010, 2011, 
+
+
+Version 0.1 - Committed a copy found in my email inbox.
+-->
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
