--- a/html/paddle.html
+++ b/html/paddle.html
@@ -9,6 +9,10 @@
 
 
 Version 0.1 - Committed a copy found in my email inbox.
+Version 0.2 - Add user settings
+
+http://kjellkvinge.github.io/paddle/
+
 -->
 
 
