Style. Change default values

--- a/html/paddle.html
+++ b/html/paddle.html
@@ -29,8 +29,9 @@ http://kjellkvinge.github.io/paddle/
  */
 
 #settings {
-	float: right;
-	border: 2px solid red;
+    float: right;
+    border: 2px solid gray;
+    padding: 2px;
 }
 body  {
 	background: #000000;
@@ -57,7 +58,7 @@ body  {
 }
 #count{
 	position:absolute;
-	left:1160px;
+	left:1060px;
 	}
 
 #list {
@@ -102,8 +103,8 @@ ul, li {
 <SCRIPT LANGUAGE="JavaScript">
 <!-- Hide script from old browsers
 // default settings
-var from =5;
-var to = 10;
+var from =0;
+var to = 4000;
 	
 function load(){
 	if (getUrlVars()["from"]  >= 0){
